--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -127,3 +127,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-family: "Roboto";
+}
